--- a/public/css/frontend/announcements/show.css
+++ b/public/css/frontend/announcements/show.css
@@ -150,7 +150,8 @@
   background-color: #eaeaea;
 }
 .announcement-detail .content-container {
-  margin: 0px 70px;
+  max-width: 1140px;
+  margin: auto;
   background-image: url(../../../images/frontend/icons/annoucement_bg.png);
   background-repeat: no-repeat;
   background-size: 100% 100%;
@@ -233,11 +234,26 @@
   text-align: left;
   float: left;
   margin: 0;
-  width: 35%;
+  width: 40%;
+}
+@media (max-width: 1210px) {
+  .announcement-detail .content-container header .announcement-detail-title .announcement-detail-title-container .announcement-detail-title-content {
+    width: 35%;
+  }
 }
 @media (max-width: 991px) {
   .announcement-detail .content-container header .announcement-detail-title .announcement-detail-title-container .announcement-detail-title-content {
     width: 50%;
+  }
+}
+@media (max-width: 767px) {
+  .announcement-detail .content-container header .announcement-detail-title .announcement-detail-title-container .announcement-detail-title-content {
+    width: 45%;
+  }
+}
+@media (max-width: 450px) {
+  .announcement-detail .content-container header .announcement-detail-title .announcement-detail-title-container .announcement-detail-title-content {
+    width: 40%;
   }
 }
 .announcement-detail .content-container header .announcement-detail-title .announcement-detail-title-container .announcement-detail-title-content h1 {
@@ -280,17 +296,12 @@
     font-size: 0.8rem;
   }
 }
-@media (max-width: 767px) {
-  .announcement-detail .content-container header .announcement-detail-title .announcement-detail-title-container .announcement-detail-title-content {
-    width: 45%;
-  }
-}
 .announcement-detail .content-container header .announcement-detail-title .announcement-detail-title-container .announcement-detail-date {
   position: absolute;
   right: 430px;
   bottom: 3px;
   margin: 0;
-  width: 10%;
+  width: 12%;
 }
 @media (max-width: 1350px) {
   .announcement-detail .content-container header .announcement-detail-title .announcement-detail-title-container .announcement-detail-date {
@@ -330,24 +341,46 @@
   .announcement-detail .content-container header .announcement-detail-title .announcement-detail-title-container .announcement-detail-date {
     right: 215px;
     bottom: 15px;
+    width: 16%;
   }
 }
-@media (max-width: 575px) {
+@media (max-width: 700px) {
   .announcement-detail .content-container header .announcement-detail-title .announcement-detail-title-container .announcement-detail-date {
+    width: 18%;
+  }
+}
+@media (max-width: 600px) {
+  .announcement-detail .content-container header .announcement-detail-title .announcement-detail-title-container .announcement-detail-date {
+    width: 20%;
     right: 175px;
     bottom: 8px;
   }
 }
-@media (max-width: 450px) {
+@media (max-width: 570px) {
   .announcement-detail .content-container header .announcement-detail-title .announcement-detail-title-container .announcement-detail-date {
     width: 18%;
+  }
+}
+@media (max-width: 490px) {
+  .announcement-detail .content-container header .announcement-detail-title .announcement-detail-title-container .announcement-detail-date {
+    width: 19%;
     right: 140px;
+  }
+}
+@media (max-width: 459px) {
+  .announcement-detail .content-container header .announcement-detail-title .announcement-detail-title-container .announcement-detail-date {
+    width: 20%;
+  }
+}
+@media (max-width: 410px) {
+  .announcement-detail .content-container header .announcement-detail-title .announcement-detail-title-container .announcement-detail-date {
+    width: 18.5%;
+    right: 130px;
   }
 }
 @media (max-width: 350px) {
   .announcement-detail .content-container header .announcement-detail-title .announcement-detail-title-container .announcement-detail-date {
     width: 20%;
-    right: 110px;
   }
 }
 @media (max-width: 320px) {
