--- a/public/css/frontend/activities/index.css
+++ b/public/css/frontend/activities/index.css
@@ -197,7 +197,7 @@
   border: 1px solid #5f6b82;
   color: #55473f;
   width: calc(50% - 56px);
-  height: 580px;
+  height: 700px;
 }
 @media (max-width: 991px) {
   .activity-card {
@@ -246,12 +246,13 @@
   width: 100%;
 }
 .activity-card .activity-card-image .image-link .cover-image {
-  height: 288px;
+  height: 420px;
   overflow: hidden;
   position: relative;
 }
 .activity-card .activity-card-image .image-link .cover-image img {
   width: 100%;
+  height: 100%;
   position: absolute;
   top: calc(50% + 0px);
   left: 0;
