--- a/resources/sass/frontend/activities/index.scss
+++ b/resources/sass/frontend/activities/index.scss
@@ -48,7 +48,7 @@
     border: 1px solid $blue;
     color: $brown;
     width: calc(50% - 56px);
-    height: 580px;
+    height: 700px;
     @media (max-width: 991px) {
         width: calc(100% - 56px);
     }
@@ -89,11 +89,12 @@
             display: inline-block;
             width: 100%;
             .cover-image {
-                height: 288px;
+                height: 420px;
                 overflow: hidden;
                 position: relative;
                 img {
                     width: 100%;
+                    height: 100%;
                     position: absolute;
                     top: calc(50% + 0px);
                     left: 0;
