--- a/resources/sass/frontend/activities/show.scss
+++ b/resources/sass/frontend/activities/show.scss
@@ -64,6 +64,9 @@
                 @media (max-width: 420px) {
                     width: 30%;
                 }
+                @media (max-width: 300px) {
+                    width: 32%;
+                }
                 // margin-bottom: 28px;
                 h2 {
                     margin: 0;
