--- a/public/css/frontend/about/index.css
+++ b/public/css/frontend/about/index.css
@@ -210,7 +210,7 @@
     font-size: 0.8rem;
   }
 }
-@media (max-width: 450px) {
+@media (max-width: 400px) {
   .about-down .about-detail-row-down .about-detail-row p {
     font-size: 0.6rem;
   }
@@ -228,7 +228,7 @@
     top: 30px;
   }
 }
-@media (max-width: 450px) {
+@media (max-width: 400px) {
   .about-down .about-detail-row-down .about-detail-row .about-down-images-left {
     top: 20px;
   }
@@ -236,6 +236,11 @@
 @media (max-width: 575px) {
   .about-down .about-detail-row-down .about-detail-row .about-down-images-left img {
     width: 15% !important;
+  }
+}
+@media (max-width: 500px) {
+  .about-down .about-detail-row-down .about-detail-row .about-down-images-left img {
+    display: none;
   }
 }
 .about-down .about-detail-row-down .about-detail-row .about-down-images-right {
@@ -265,4 +270,9 @@
 }
 .about-down .about-detail-row-down .about-detail-row .about-down-images-right img {
   width: 100%;
+}
+@media (max-width: 500px) {
+  .about-down .about-detail-row-down .about-detail-row .about-down-images-right img {
+    display: none;
+  }
 }
