--- a/resources/sass/frontend/_sidebar.scss
+++ b/resources/sass/frontend/_sidebar.scss
@@ -2,49 +2,66 @@
     width: $navbar-lg-width;
     height: 100vh;
     min-height: 550px;
+    padding: 15px 10px;
+
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+
     background-color: $white;
-    padding-right: 90px;
+    z-index: 1040;
+    
     position: fixed;
     top: 0;
-    right: ($navbar-lg-width * -1) + -20px;
-    transition: all 0.3s ease;
-    z-index: 1040;
+    right: ($navbar-lg-width * -1);
+    box-shadow: none;
+    transition: right 0.3s ease, box-shadow 0.3s ease;
+    
+    @media (max-width: 767px) {
+        width: 100vw;
+        right: -100vw;
+        &.open {
+            right: 0;
+        }
+    }
+
     &.open {
-        right: -75px;
+        right: 0px;
         box-shadow: -5px 0px 15px 1px rgba(0, 0, 0, 0.2);
     }
+
+    button.close {
+        font-size: 2rem;
+        color: $green;
+        position: absolute;
+        top: 15px;
+        right: 20px;
+        transition: color 0.5s ease;
+        &:hover {
+            color: $blue;
+        }
+    }
+
     .navbar-nav {
-        width: 70%;
-        display: block;
-        margin-left: 10%;
-        margin-top: 8%;
+        min-width: 260px;
+        margin-top: 40px;
+        margin-left: 35px;
+        @media (max-width: 400px) {
+            margin-left: 20px;
+        }
         .nav-item {
-            margin-bottom: 4%;
-            &.small-title{
-                margin-bottom: 0;
-            }
-            &.small{
-                margin: 0;
-                .nav-link {
-                    font-size: 1rem;
-                    padding: 0;
-                    padding-left: 26px;
-                    padding-bottom: 3px;
-                    @media (max-width: 350px) {
-                        font-size: 0.6rem;
-                    }
-                }
-            }
+            margin-bottom: 10px;
             .nav-link {
                 border: none;
                 letter-spacing: 5px;
                 padding: 0;
+                font-size: 1.2rem;
                 @media (max-width: 400px) {
-                    font-size: 1rem;
+                    font-size: 1.1rem;
                 }
-                @media (max-width: 350px) {
-                    font-size: 0.8rem;
-                }
+                // @media (max-width: 350px) {
+                //     font-size: 0.8rem;
+                // }
                 .underline {
                     width: 0%;
                     height: 2px;
@@ -53,31 +70,81 @@
                 }
                 &:hover {
                     .underline {
-                        width: 90%;
+                        width: 80%;
                     }
                 }
             }
         }
     }
-    #closeBtn {
-        margin-top: 2%;
-        margin-right: 1%;
-        font-size: 2rem;
-        color: $green;
-        &:hover {
-            color: $blue;
+
+    .mutilink{
+        margin-bottom: 0px !important;
+        .mutilink-title{
+            margin-bottom: 10px;
+        }
+        .mutilink-menu{
+            display: flex;
+            flex-direction: column;
+            flex-wrap: nowrap;
+            // &.open{
+            //     display: flex;
+            // }
+            .mutilink-item{
+                letter-spacing: 3px;
+                margin-bottom: 10px;
+                @media (max-width: 400px) {
+                    font-size: 0.9rem;
+                }
+                .underline {
+                    width: 0%;
+                    height: 1px;
+                    background-color: $blue;
+                    transition: width 0.2s ease-in;
+                }
+                &:hover {
+                    text-decoration: none;
+                    .underline {
+                        width: 30%;
+                    }
+                }
+            }
         }
     }
-    .bottom {
-        width: calc(100% - 90px);
-        @media (max-width: 440px) {
-            width: 100%;
+    
+    .navbar-bottom {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        margin: 15px 35px 10px 35px;
+        @media (max-width: 400px) {
+            margin-left: 20px;
         }
-        position: absolute;
-        left: 0;
-        bottom: 30px;
+        .navbar-nav-bottom{
+            display: flex;
+            flex-direction: row;
+            flex-wrap: nowrap;
+            list-style: none;
+            padding: 0;
+            margin: 0px 0px 15px 0px;
+            .nav-item{
+                margin-right: 20px;
+                .nav-link{
+                    padding: 0px;
+                    &:hover{
+                        text-decoration: none;
+                    }
+                    img{
+                        width: 50px;
+                        @media (max-width: 400px) {
+                            width: 40px;
+                        }
+                    }
+                }
+            }
+        }
         div#search {
-            margin: 0px 10%;
+            min-width: 210px;
+            margin: 0px;
             padding: 2% 0px;
             .inputBox {
                 border: 2px solid $blue;
@@ -147,12 +214,5 @@
             }
         }
     }
-    @media (max-width: 768px) {
-        width: 100vw;
-        right: -100vw;
-        padding-right: 20px;
-        &.open {
-            right: 0;
-        }
-    }
+    
 }
