--- a/resources/sass/frontend/_navbar.scss
+++ b/resources/sass/frontend/_navbar.scss
@@ -113,6 +113,7 @@
         }
         .nav-item {
             margin-right: 4%;
+            height: 3rem;
             &.active {
                 .nav-link {
                     color: $blue;
